src/main/java/com/test/trading/tradingValidatorService/errors/ErrorMessage.java
package com.test.trading.tradingValidatorService.errors;

public interface ErrorMessage {
	
	String getErrorMessage();
}
